hphp/test/zend/good/ext-posix/posix_getcwd.php
<?php

var_dump(posix_getcwd());
var_dump(posix_getcwd(1));

?>