hphp/test/zend/bad/ext/curl/tests/curl_strerror_001.php
<?php

var_dump(strtolower(curl_strerror(CURLE_OK)));
var_dump(strtolower(curl_strerror(CURLE_UNSUPPORTED_PROTOCOL)));
var_dump(strtolower(curl_strerror(-1)));

?>